# MedReviewAI

./: .env.example  .gitignore  .vercelignore  AUDIT.md  CONTRIBUTORS.md  FINAL_REPORT.md  INTERNAL_AUDIT.md  README.md  README_PRESENTATION.md  WHATSAPP_UPDATE.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  start_project.sh  tailwind.config.ts  vercel.json  vite.config.ts
.claude/: settings.local.json
api/: index.py
backend/: main.py  requirements.txt
docs/audit/: audit.json
report/: build_report.py
src/: App.tsx  index.css
src/components/: ApiAuthBinder.tsx  ConfidenceGauge.tsx  DashboardLayout.tsx  DetailedAnalysis.tsx  ExtractionCards.tsx  LoadingScreen.tsx  PageTransition.tsx  PicoTable.tsx  SourceReferences.tsx  ThemeToggle.tsx
src/lib/: api.ts
src/pages/: AboutPage.tsx  AnalyzerPage.tsx  DocumentViewerPage.tsx  LandingPage.tsx  NotFound.tsx  ResultsDashboardPage.tsx  SearchScreeningPage.tsx
src/test/: api.test.ts
