[project]
name = "medreviewai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "psycopg[binary]==3.2.3",
    "groq==0.15.0",
    "httpx==0.27.2",
    "pymupdf==1.25.1",
    "requests==2.32.3",
    "python-multipart==0.0.12",
    "pyjwt[crypto]==2.9.0",
]
